# locomp

./: .gitignore  README.md  _test_tensor_ops.py  debug_ir.py  progress.md  pyproject.toml
benchmarks/: _bench_flash_v3.py  _debug_online.py  _debug_v2.py  _gpu_timing.py  _print_msl.py  _print_simd_msl.py  _print_softmax_msl.py  bench_gpu.py  bench_gpu_v2.py  bench_gpu_v3.py  bench_new_kernels.py  bench_rocm_mi100.py  bench_tiled_matmul.py  bench_tiled_v2.py  bench_tune_matmul.py
examples/: 01_vector_add.py  02_dot_product.py  03_vector_add_threaded.py  04_matmul.py  05_softmax.py  06_float16_vector_add.py  07_tiled_matmul.py  08_parallel_softmax.py  09_simd_softmax.py  10_simd_hybrid_softmax.py  11_micro_tiled_matmul.py  12_micro_tiled_4x4_matmul.py  13_opt_matmul.py  14_online_softmax.py  15_flash_attention.py  16_flash_attention_v2.py  17_flash_attention_v3.py  17_flash_attention_v3_br32.py  18_simdgroup_matmul.py  19_simdgroup_matmul_v2.py  20_simdgroup_matmul_v3.py  21_simdgroup_matmul_v4.py  22_simdgroup_flash_attn.py  23_math_ops.py  24_multi_head_attention.py  25_autotune.py  26_float16_simdgroup_matmul.py  27_float16_flash_attn.py  28_conv2d.py  29_rms_norm.py  30_layer_norm.py  31_fused_silu.py  32_fused_gelu_bias.py  33_rope.py  34_fused_residual_norm.py  35_gpt2_inference.py  36_gpt2_kv_cache.py  37_gpu_attention.py  38_quantized_matmul.py  39_batched_matmul.py  (+28 more)
locomp/: __init__.py  _builtin_kernels.py  api.py  autograd.py  autotune.py  cache.py  frontend.py  gpu_autograd.py  graph.py  ir.py  optimizer.py  profiler.py
paper/: locomp.tex
tests/: conftest.py  modal_cuda_runner.py  test_2d_grid.py  test_autograd.py  test_autotune.py  test_control_flow.py  test_cuda_codegen.py  test_cuda_runtime.py  test_float16.py  test_frontend.py  test_gpu_autograd.py  test_hardening.py  test_ir.py  test_metal_codegen.py  test_optimizer.py  test_reductions.py  (+2 more)
(+12 files in other folders)
